--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
   "author": "ownclit",
   "license": "MIT",
   "private": false,
+  "bin": {
+    "clt": "./build/bin/ownclt.js",
+    "ownclt": "./build/bin/ownclt.js"
+  },
+  "scripts": {
+    "ts:watch": "tsc --watch",
+    "ts:build": "tsc",
+    "ts:dev": "ts-node-dev --respawn main.ts"
+  },
   "devDependencies": {
+    "@types/node": "^14.14.34",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
