--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "scripts": {
     "ts:watch": "tsc --watch",
     "ts:build": "tsc",
-    "ts:dev": "ts-node-dev --respawn main.ts"
+    "dev": "nodemon ./build/main.js run say/hello"
   },
   "devDependencies": {
     "@types/node": "^14.14.34",
-    "ts-node-dev": "^1.1.6",
+    "nodemon": "^2.0.7",
     "typescript": "^4.2.3"
   }
 }
