--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@types/node": "^14.14.34",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "object-collection": "^1.0.31"
   }
 }
