--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "ts:watch": "tsc --watch",
     "ts:build": "tsc",
-    "dev": "nodemon ./build/main.js run say/hello"
+    "dev": "nodemon ./build/main.js clt/link"
   },
   "devDependencies": {
     "@types/node": "^14.14.34",
@@ -22,6 +22,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "object-collection": "^1.0.31"
+    "chalk": "^4.1.0",
+    "object-collection": "^1.0.31",
+    "ora": "^5.3.0"
   }
 }
